add admincli and usercli classes and main, the app is functional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,20 @@ project(GameStore)
 
 set(CMAKE_CXX_STANDARD 17)
 
+include_directories(${PROJECT_SOURCE_DIR}/include)
+
+file(COPY ${CMAKE_SOURCE_DIR}/data DESTINATION ${CMAKE_BINARY_DIR})
+
 add_executable(GameStore src/main.cpp
         include/Game.h
         include/Bundle.h
-        include/Cli.h
         include/Store.h
         include/User.h
         src/Bundle.cpp
-        src/Cli.cpp
         src/Game.cpp
         src/Store.cpp
-        src/User.cpp)
+        src/User.cpp
+        include/AdminCli.h
+        src/AdminCli.cpp
+        include/UserCli.h
+        src/UserCli.cpp)
